--- a/themes/gandalf/css/core.css
+++ b/themes/gandalf/css/core.css
@@ -635,3 +635,18 @@ div#loginBox {
 	margin: 0 15px;;
 	display: inline;
 }
+div#popup {
+	position: absolute;
+	left: 64px;
+	top: 22px;
+	z-index: -100;
+	width: 1100px;
+	border: 3px solid #13678A;
+	background: none repeat scroll 0 0 white;
+}
+div#popup .window-bar {
+	overflow: auto;
+	padding: 2px 5px 2px 0;
+	text-align: right;
+	background-color: #E3ECF3;
+}
