--- a/themes/default/style.css
+++ b/themes/default/style.css
@@ -1,30 +1,5 @@
+@import url(style-base.css);
 @import url(style-details.css);
-/* GENERAL */
-.clear {clear:both;}
-body {
-	font: 11px Verdana, Arial, Helvetica, sans-serif;
-	color:#333;
-	padding:0px;
-	margin:0px;
-}
-h1, h2, h3, h4 { font-family:"Trebuchet MS", halvetica, Verdana, sans-serif;}
-h1 {font-size:22px;}
-h2 {font-size:18px;}
-h3 {font-size:16px;}
-h4 {font-size:14px;}
-h2 a {
-	text-decoration: none;
-	vertical-align: top;
-}
-a {color: #333;}
-img {
-	border:0px;
-}
-input {
-	font-size: .9em;
-	margin: 1px;
-	margin-bottom: 3px;
-}
 #mainNav form.search {
 	padding-left: 10px;
 	position: relative;
