Changement au niveau de la classe dans une recherche

--- a/themes/aragorn/css/core.css
+++ b/themes/aragorn/css/core.css
@@ -713,7 +713,7 @@ width:700px;
 padding:15px;
 text-align:center;
 }
-span.search_content
+span.search-content
 {
 font-weight:bold;
 color: #FF0000;
