--- a/themes/gil-galad/css/core.css
+++ b/themes/gil-galad/css/core.css
@@ -644,7 +644,7 @@ span.search
 font-weight:bold;
 color: #FF0000;
 }
-span.search_content
+span.search-content
 {
 font-weight:bold;
 color: #FF0000;
