--- a/themes/gil-galad/css/core.css
+++ b/themes/gil-galad/css/core.css
@@ -787,10 +787,11 @@ max-height:40px;
 max-width:40px;
 font-size:8px;
 }
+.gravatar {height:40px; width:40px; background:url('../images/gravatar.png') }
 /* WordPress images */
 img.alignright
 {
-float:right
+float:right;
 margin-left:10px;
 }
 img.alignleft
@@ -913,7 +914,7 @@ div#loginBox {
 	vertical-align: top;
 	white-space: nowrap;
 	font-weight: bold;
-	margin: 0 50px;;
+	margin: 0 50px;
 }
 div#loginBox span#login-dropdown {
 	background: url('../images/sprite-icons.png') no-repeat scoll -79px -68px transparent;
