--- a/themes/aragorn/css/core.css
+++ b/themes/aragorn/css/core.css
@@ -841,7 +841,7 @@ div#loginBox {
 	vertical-align: top;
 	white-space: nowrap;
 	font-weight: bold;
-	margin: 0 50px;;
+	margin: 0 50px;
 }
 div#loginBox span#login-dropdown {
 	background: url('../images/sprite-icons.png') no-repeat scoll -79px -68px transparent;
