--- a/themes/legolas/css/core.css
+++ b/themes/legolas/css/core.css
@@ -179,6 +179,7 @@ div.gravatar {
 	float: left;
 	margin: 20px 0 0 0;
 }
+.gravatar {height:40px; width:40px; background:url('../images/gravatar.png') }
 div.gravatar img {
 	height: 40px;
 	width: 40px;
@@ -385,7 +386,7 @@ div#loginBox {
 	vertical-align: top;
 	white-space: nowrap;
 	font-weight: bold;
-	margin: 0 50px;;
+	margin: 0 50px;
 }
 div#loginBox span#login-dropdown {
 	background: url('../images/sprite-icons.png') no-repeat scoll -79px -68px transparent;
