Update tracker in header of files

--- a/themes/aragorn/css/core.css
+++ b/themes/aragorn/css/core.css
@@ -4,7 +4,7 @@
 * Copyright (C) 2009 By French Dev Team : Dev BilboPlanet
 * Contact : dev@bilboplanet.com
 * Website : www.bilboplanet.com
-* Tracker : redmine.bilboplanet.com
+* Tracker : http://chili.kiwais.com/projects/bilboplanet
 * Blog : www.bilboplanet.com
 *
 *
