--- a/admin/meta/css/styles.css
+++ b/admin/meta/css/styles.css
@@ -200,17 +200,16 @@ table#feedlist tr.auto-disabled, tr.auto-disabled a, tr.auto-disabled a:visited 
 	text-shadow:1px 1px #000000;
 }
 #bp_pannel h2.selected {background-position:0% -43px;}
-#bp_pannel .element {padding: 5px;}
+/*#bp_pannel .element {padding: 5px;}*/
 #bp_pannel .message {margin: 5px 0px;}
 #bp_pannel ul {list-style: none;padding-bottom: 7px;}
 #bp_pannel li a {
 	display: block;
-	height: 22px;
-	line-height: 22px;
+	height: 18px;
+	line-height: 18px;
 	padding: 0px 0px 0px 25px;
 	background-position: 3px 3px;
 	background-repeat: no-repeat;
-	font-size: 1.1em;
 	text-decoration: none;
 	border-style: solid;
 	border-width: 1px;
@@ -613,13 +612,27 @@ div.tag-line {
     margin : 5px 5px;
 }
 div.tag-line span.tag {
-	margin: 0px 5px;
+	margin: 2px 5px;
     padding: 0px 6px 1px 6px;
 	background: #edbe59;
 	-moz-border-radius: 8px;
 	-khtml-border-radius: 8px;
 	-webkit-border-radius: 8px;
 	border-radius: 8px;
+	display:inline-block;
+}
+div.user-line {
+    margin : 5px 5px;
+}
+div.user-line span.user {
+	margin: 2px 5px;
+    padding: 0px 6px 1px 6px;
+	background: #6cac4d;
+	-moz-border-radius: 8px;
+	-khtml-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	display:inline-block;
 }
 table#post-list h3{
 	font-weight: bold;
@@ -1463,19 +1476,27 @@ div.tribesbox {
 	margin: 5px;
 	border-radius: 2px;
 	border: 1px solid #CCC;
-	width: 150px;
+	width: 250px;
 	overflow: hidden;
 	padding: 5px;
 	font-size: 0.9em;
 	background-color: #FFF;
 }
-div.tribesbox .private{
-	background: transparent url(../icons/lock_locked) no-repeat top left;
+div.tribe-private{
+	background-color: #EFEFEF;
 }
-div.tribesbox .private{
-	background: transparent url(../icons/lock_unlock) no-repeat top left;
+div.tribe-public{
 }
-
+div.tribesbox ul.actions {
+/*	list-style:none outside none;*/
+	list-style-type:none;
+	list-style-image:none;
+	float: left;
+	margin: 0px 0px 0px 5px;
+}
+div.tribesbox ul.actions li{
+	display:inline-block;
+}
 div.tribesbox p {
 	display: block;
 	margin: 10px auto;
