Adding tribe icon to theme and adding support of gif and png

--- a/admin/meta/css/styles.css
+++ b/admin/meta/css/styles.css
@@ -1502,6 +1502,9 @@ div.tribesbox p {
 	display: block;
 	margin: 10px auto;
 }
+div.tribesbox p.tribe-icon {
+	float: right;
+}
 div.tribesbox .feedlink {
 	float: right;
 }
