Adding managing "notags"

--- a/themes/libre/css/style.css
+++ b/themes/libre/css/style.css
@@ -1586,6 +1586,9 @@ div.userbox p {
 div.userbox .feedlink {
 	float: right;
 }
+div.userbox .shaarlilink {
+	float: right;
+}
 
 /*********************
 * Design of the tags page
