--- a/admin/meta/css/styles.css
+++ b/admin/meta/css/styles.css
@@ -621,6 +621,19 @@ div.tag-line span.tag {
 	border-radius: 8px;
 	display:inline-block;
 }
+div.notag-line {
+    margin : 5px 5px;
+}
+div.notag-line span.tag {
+	margin: 2px 5px;
+    padding: 0px 6px 1px 6px;
+	background: #fb80f4;
+	-moz-border-radius: 8px;
+	-khtml-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	display:inline-block;
+}
 div.user-line {
     margin : 5px 5px;
 }
@@ -1476,7 +1489,7 @@ div.tribesbox {
 	margin: 5px;
 	border-radius: 2px;
 	border: 1px solid #CCC;
-	width: 260px;
+	width: 275px;
 	overflow: hidden;
 	padding: 5px;
 	font-size: 0.9em;
