--- a/themes/newLibre/css/style.css
+++ b/themes/newLibre/css/style.css
@@ -484,143 +484,35 @@ div.post-thumbnail{
 /* Top Site Navigation */
 
 div#navigation-bg{
-	/*font-family:Arial, Helvetica, sans-serif;*/
+	display: block;
+	position: absolute;
+	top: 65px;
+	right: 0;
+	z-index: 999;
+	border-radius: 0 0 10px 10px;
 	font-size:11px;
-	text-transform:uppercase;
-    text-align:center;
-    background:black url('../images/nav-bg2.png') scroll top left repeat-x;
-    height:50px;
+/*	text-transform:uppercase;*/
+    text-align:right;
+    background:black; /* url('../images/nav-bg2.png') scroll top left repeat-x;*/
+	width: 200px;
+	padding: 0 15px 10px 0;
 }
 ul#navigation{
     color:#acacac;
     list-style-image:none;
-    list-style-type:none;
-    padding:6px 0 0 0;
-}
-ul#navigation li,ul#categories li{
-    float: left;
-    position: relative;
 }
 ul#navigation li a{
     display: block;
 	color: #CCC;
-	line-height: 32px;
-	padding: 0 12px;
+	line-height: 25px;
 }
-ul#navigation li a:hover{
+ul#navigation li:hover{
 	color: white;
-/*	background: url(../images/nav-hover.png) 50% 0 no-repeat;*/
+	background: url(../images/nav-hover.png) 50% 0 no-repeat;
 	text-decoration: none;
 }
 
-ul#navigation ul,
-ul#categories ul{
-    position:absolute;
-/*    top: 42px;*/
-    list-style-image:none;
-    padding:0 15px 3px 15px;
-    background-color:#0f0f0f;
-    text-align: left;
-    /* Firefox */
-    -moz-border-radius-bottomright:5px;
-    -moz-border-radius-bottomleft:5px;
-    /* Linux Browsers */
-    -khtml-border-bottom-right-radius:5px;
-    -khtml-border-bottom-left-radius:5px;
-    /* Webkit */
-    -webkit-border-bottom-right-radius:5px;
-    -webkit-border-bottom-left-radius:5px;
-    /* CSS3 */
-    border-bottom-right-radius:5px;
-    border-bottom-left-radius:5px;
-    display:none;
-    z-index:9999999;
-}
 
-ul#navigation li ul li ul {
-    left: 130px !important;
-    top: 0;
-    display: none;
-}
-ul#categories ul {
-    top: 32px;
-    left: -3px;
-}
-ul#categories li ul li ul {
-    left: 120px !important;
-    top: 0;
-    display: none;
-}
-ul#categories li {
-    text-align: left;
-}
-ul#categories li ul  {
-    background-color: #e4e4e4;
-}
-ul#categories li ul li  {
-    background: none;
-}
-
-
-ul#navigation li:hover ul li ul,
-ul#navigation li:hover ul li ul li ul,
-ul#navigation li:hover ul li ul li ul li ul,
-ul#categories li:hover ul li ul,
-ul#categories li:hover ul li ul li ul,
-ul#categories li:hover ul li ul li ul li ul {
-    display: none;
-}
-
-ul#navigation li:hover ul,
-ul#navigation li ul li:hover ul,
-ul#navigation li ul li ul li:hover ul,
-ul#navigation li ul li ul li ul li:hover ul,
-ul#categories li:hover ul,
-ul#categories li ul li:hover ul,
-ul#categories li ul li ul li:hover ul,
-ul#categories li ul li ul li ul li:hover ul {
-    display: block ;
-}
-ul#navigation li ul li:hover ul,
-ul#navigation li ul li ul li:hover ul,
-ul#navigation li ul li ul li ul li:hover ul,
-ul#categories li ul li:hover ul,
-ul#categories li ul li ul li:hover ul,
-ul#categories li ul li ul li ul li:hover ul{
-    padding-top: 15px;
-      /* Firefox */
-    -moz-border-radius-topright:5px;
-    -moz-border-radius-topleft:5px;
-    /* Linux Browsers */
-    -khtml-border-top-right-radius:5px;
-    -khtml-border-top-left-radius:5px;
-    /* Webkit */
-    -webkit-border-top-right-radius:5px;
-    -webkit-border-top-left-radius:5px;
-    /* CSS3 */
-    border-top-right-radius:5px;
-    border-top-left-radius:5px;
-}
-
-ul#categories li ul li:hover ul,
-ul#categories li ul li ul li:hover ul,
-ul#categories li ul li ul li ul li:hover ul{
-    padding-top: 5px;
-}
-
-ul#navigation li ul li{
-    display:block;
-    clear:both;
-    width:150px;
-
-}
-ul#navigation li ul li a{
-    width: 100%;
-    color:#acacac;
-}
-ul#categories li ul li a {
-    width: 95px;
-}
 /* Header */
 div#header-bg{
     background:black url('../images/header-bg-mid.png') scroll top left repeat;
@@ -658,7 +550,7 @@ a#planet-title {
 div#header-menu {
 	display: inline-block;
 	float: right;
-	height: 60px;
+	height: 65px;
 	width: 60px;
 	margin-right: 20px;
 }
