--- a/themes/default/user/css/core.css
+++ b/themes/default/user/css/core.css
@@ -1,81 +1,3 @@
-div#wrapper {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	font-size: 0.9em;
-	background: #eee;
-	color: #777;
-}
-
-/*****************************
- * La sidebar
- * ****************************/
-
-div#sideMenu {
-	width: 300px;
-	height: 100%;
-	text-shadow: 1px 1px 0 #fff;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-}
-div#sideMenu ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-}
-div#sideMenu li {
-	padding: 1.5em 1em 1.5em 1em;
-	line-height: 50px;
-	vertical-align: center;
-	height: 50px;
-	font-size: 2em;
-	/*background: #e3ecf3;*/
-	background: url(../images/menu_bg2.png) repeat-y;
-	width: 250px;
-	color: #4180b1;
-}
-div#sideMenu li:hover {
-	background: url(../images/menu_bg_hover2.png) repeat-y;
-	/*background: #cce3f4;*/
-	color: #224d6f;
-}
-div#sideMenu li.selected {
-	background: url(../images/menu_arrow5.png) no-repeat;
-	width: 250px;
-	color: #224d6f;
-	padding: 1.25em 1em;
-}
-div#sideMenu span {
-	height: 25px;
-	padding-left: 40px;
-}
-div#sideMenu span#dashboard {
-	background: url(../images/dashboard.png) no-repeat;
-}
-div#sideMenu span#profile {
-	background: url(../images/profile.png) no-repeat;
-}
-div#sideMenu span#write {
-	background: url(../images/write.png) no-repeat;
-}
-div#sideMenu span#tribes {
-	background: url(../images/tribes.png) no-repeat;
-}
-div#sideMenu span#social {
-	background: url(../images/social.png) no-repeat;
-}
-
-/*******************************
- * main content
- * ******************************/
-div#mainContent {
-	position: absolute;
-	top: 0px;
-	left: 300px;
-	margin-top: 20px;
-	font-size: 1.2em;
-}
 li.user-post {
 	margin: 7px 0;
 	list-style: none;
@@ -87,28 +9,10 @@ div.user-post-list li.disabled {
 li.user-post span.tag-line {
 	margin-left: 60px;
 }
-span.tag a, span.user a {
-	color:#000;
-}
-span.tag {
-	margin: 0px 5px;
-    padding: 0px 6px 1px 6px;
-	background: #edbe59;
-	-moz-border-radius: 8px;
-	-khtml-border-radius: 8px;
-	-webkit-border-radius: 8px;
-	border-radius: 8px;
-}
-div#mainContent .dashbox {
+div#main-body .dashbox {
 	padding: 20px;
-	border: 1px solid #fff;
-	-moz-box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	-webkit-box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	-moz-border-radius: 20px;
-	-webkit-border-radius: 20px;
-	border-radius: 20px;
-	background: #9aadbc;
+	border: 1px solid #111;
+	border-radius: 5px;
 }
 table.boxy-wrapper {
 	width: 500px;
@@ -117,18 +21,12 @@ table.boxy-wrapper {
 /******************************
  * Les formulaires
  * ****************************/
-form {
+form.user {
 	padding: 20px;
-	border: 1px solid #fff;
-	-moz-box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	-webkit-box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	-moz-border-radius: 20px;
-	-webkit-border-radius: 20px;
-	border-radius: 20px;
-	background: #9aadbc;
+	border: 1px solid #111;
+	border-radius: 5px;
 }
-input, select, textarea {
+form.user input,form.user select,form.user textarea {
     /*déjà en inline-block*/
     width: 250px;
     padding: 4px;
@@ -136,35 +34,30 @@ input, select, textarea {
 	border: 1px solid #aaa;
 	background: #f2f2f2;
 
-	-moz-box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	-webkit-box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	box-shadow: -1px -1px 0 #ddd, -1px -1px 0 #ddd inset;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
+	border-radius: 0px;
 }
-textarea {
+form.user textarea {
     width: 450px;
     height: 15em;
 }
-label {
+form.user label {
     display: inline-block;
     width: 200px;
     margin-right: 20px;
    /* vertical-align: bottom;*/
     text-align: right;
 }
-label.textarea {
+form.user label.textarea {
 	vertical-align: top;
 }
-input#apply {
+form.user input#apply {
 	width: 100px;
 }
-span.description {
+form.user span.description {
 	margin-left: 120px;
 }
 
-div.button {
+form.user div.button {
 	padding: 5px;
 	background-color: #D2D6CB;
 	-moz-border-radius: 5px;
@@ -176,7 +69,7 @@ div.button {
 }
 div#shaarli-details {
 	margin-left: 50px;
-	border: 1px solid #DDDDDD;
+	border: 1px solid #999;
 	padding: 5px;
 }
 p#shaarli-local-instance {
