--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -613,6 +613,10 @@ div#tribes-bg ul.menu li.selected {
 /*	background-color: #e4e4e4;*/
     background-color:#dfdfdf;
 }
+div#tribes-bg ul.menu a li span.menu-text{
+	vertical-align: top;
+	line-height: 24px;
+}
 div#followers{ /* Followers */
 	background:transparent url('../images/followers-bg.png') repeat;
 	padding:12px;
@@ -1502,15 +1506,6 @@ iframe.identishare {
 div#portal {
 	width: 100%;
 }
-/*
-.portalbox {
-	border-radius : 5px;
-	width: 400px;
-	padding: 0px;
-	font-size: 0.8em;
-	background-color: #FFF;
-	margin: 20px 0px;
-}*/
 .portalbox .title {
 	font-size: 1.1em;
 	font-weight: bold;
@@ -1533,6 +1528,12 @@ div#portal {
 }
 .portalbox .list li{
 	padding: 5px 5px;
+}
+.portalbox .box-title {
+	vertical-align: top;
+	line-height: 24px;
+	padding-left: 10px;
+	font-size: 1.3em;
 }
 
 /*********************
